# ArtStudies

./: .gitignore  CNAME  README.md  pyproject.toml
Analyse Multidimensionnelle/: .gitignore
Analyse Multidimensionnelle/DM ACP/: .RData  .Rhistory  DM_ACP.Rmd
Analyse Multidimensionnelle/TP1/: .RData  .Rhistory  TP2_Enonce_2024.Rmd  autos.csv
Analyse Multidimensionnelle/TP3/: TP3-Enonce.Rmd
Analyse Multidimensionnelle/TP4/: TP4-Enonce.Rmd
Analyse Multidimensionnelle/TP5/: TP5_Enonce.Rmd  housetasks.csv
Calculs Numériques/: DM1.ipynb  DM3.ipynb  Interpolation_2.ipynb  Methode_de_Newton.ipynb  Point_Fixe.ipynb
Equations Différentielles/: TP1_EDO_EulerExp.ipynb  TP2_Lokta_Volterra.ipynb
L3/Analyse Matricielle/: TP1_Methode_de_Gauss.ipynb
L3/Calculs Numériques/: DM1.ipynb  DM2.ipynb  DM3.ipynb  Interpolation.ipynb  Interpolation_2.ipynb  Intégration.ipynb  Point_Fixe.ipynb
L3/Equations Différentielles/: TP1_EDO_EulerExp.ipynb  TP2_Lokta_Volterra.ipynb  TP3_Convergence.ipynb
L3/Méthodes Numériques/: TP1_Equation_de_Poisson.ipynb
L3/Probabilités/: CC2.ipynb  TP1.ipynb
L3/Projet Numérique/: Segregation.ipynb
L3/Statistiques/: TP1.ipynb  TP2.ipynb
M1/Monte Carlo Methods/: Exercise1.rmd  Exercise10.rmd  Exercise11.rmd  Exercise12.rmd  Exercise13.rmd  Exercise2.rmd  Exercise3.rmd  Exercise5.rmd  Exercise6.rmd  Exercise7.rmd  Exercise8.rmd  Exercise9.rmd  TP1.Rmd
M1/Numerical Methods/: TP1.ipynb  TP2.ipynb  TP2_DANJOU_Arthur.ipynb  TP_DANJOU_Arthur.ipynb
M1/Numerical Optimisation/: ComputerSession1.ipynb  ComputerSession1Subject.ipynb  ComputerSession2.ipynb  ComputerSession3.ipynb
M1/Portfolio Management/: TP-Project.ipynb  TP1.ipynb
M1/Statistical Learning/: TP0_Intro_Jupyter_Python.ipynb  TP1_A_first_example.ipynb  TP2_KNN.ipynb  TP2_bis_OPTIONAL.ipynb  TP3_Logistic_Regression_and _SGD.ipynb  TP4_Ridge_Lasso_and_CV.ipynb  TP5_Naive_Bayes.ipynb  TP6_keras_intro.ipynb  TP7_Kmeans.ipynb  (+1 more)
Probabilités/: TP2.ipynb
Projet Numérique/: Segregation.ipynb
Statistiques/: TP1.ipynb  TP2.ipynb
(+41 files in other folders)
